test/sema/typeck/literal/int64-neg-overflow.dora
fn f() { let x = -9223372036854775809i64; }
